# falkordb-py-orm

./: .gitignore  CASCADE_SAVE_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION_REVIEW_NOV_29_2025.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_UPDATED.md  PHASE10_COMPLETE.md  PHASE10_IMPLEMENTATION_SUMMARY.md  PHASE10_SECURITY_PLAN.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3A_COMPLETE.md  PHASE3B_COMPLETE.md  PHASE3CD_COMPLETE.md  PHASE3_BREAKDOWN.md  PHASE3_COMPLETE.md  PHASE3_QUICK_GUIDE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PHASE8_TESTS_AND_REL_UPDATES_COMPLETE.md  PHASE9_COMPLETE.md  PUBLISHING.md  QUICKSTART.md  README.md  RELATIONSHIP_TESTING_COMPLETE.md  RELEASE_v1.1.0.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: MIGRATION_GUIDE.md
docs/api/: decorators.md  repository.md
examples/: async_usage.py  basic_usage.py  cascade_save_example.py  derived_queries.py  indexes_example.py  interned_strings.py  lazy_loading_example.py  phase4_advanced_features.py  relationship_declaration.py  relationship_updates_example.py  relationships_complete.py  transaction_example.py
examples/security/: basic_security_example.py  rbac_manager_example.py
falkordb_orm/: __init__.py  async_mapper.py  async_relationships.py  async_repository.py  async_session.py  decorators.py  exceptions.py  indexes.py  mapper.py  metadata.py  pagination.py  query_builder.py  query_decorator.py  query_parser.py  registry.py  relationships.py  repository.py  schema.py  session.py  types.py
falkordb_orm/security/: README.md  __init__.py  audit.py  context.py  decorators.py  exceptions.py  manager.py  models.py  policy.py  repository.py  rewriter.py  session.py  store.py
tests/: __init__.py  test_cascade_save.py  test_decorators.py  test_eager_loading.py  test_indexes.py  test_lazy_loading.py  test_mapper.py  test_pagination.py  test_query_builder.py  test_query_parser.py  test_relationship_metadata.py  test_relationship_updates.py  test_schema.py  test_session.py
tests/integration/: __init__.py  test_full_workflow.py
tests/security/: test_integration.py  test_models.py
