[tool.poetry]
name = "falkordb-orm"
version = "0.1.0"
description = "Object-Graph Mapping for FalkorDB with Spring Data-inspired patterns"
authors = ["FalkorDB Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/FalkorDB/falkordb-py-orm"
repository = "https://github.com/FalkorDB/falkordb-py-orm"
keywords = ["falkordb", "orm", "graph", "database", "ogm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "falkordb_orm"}]

[tool.poetry.dependencies]
python = "^3.8"
falkordb = "^1.0.0"
typing-extensions = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^23.0"
mypy = "^1.0"
ruff = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
